--- a/style.css
+++ b/style.css
@@ -418,5 +418,18 @@ width: 100%;
     margin-left:8px;
     margin-right:8px;
 }
+.footer{
+    display: block;
+
+}
+.leftsession{
+    width: 100%;
+}
+.rightsession{
+    width: 100%;
+}
+
+
+
 
 }
